--- a/d3/index.html
+++ b/d3/index.html
@@ -1,10 +1,9 @@
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
+<h1 id="welcome" class="text">Welcome to Marcus' D3 Experience</h1>
+
+
 <script>
-  console.log(d3); // test if d3 is loaded
-  // Add an SVG
-  // Add Rectangles
-  // Add Circles
-  // Add Lines
-  // Add Polygons
+  console.log("Testing"); // test if d3 is loaded
+  d3.csv("../cars-sample.csv");
 </script>
