--- a/d3/index.html
+++ b/d3/index.html
@@ -1,9 +1,86 @@
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
-<h1 id="welcome" class="text">Welcome to Marcus' D3 Experience</h1>
+<h1 id="welcome" class="text">D3 Car's MPG v.s. Weight</h1>
 
+<svg id="scatterplot" width=900 height=700 ></svg>
 
 <script>
-  console.log("Testing"); // test if d3 is loaded
-  d3.csv("../cars-sample.csv");
+  // console.log("Testing"); // test if d3 is loaded
+  var width=800, height=600
+  var Mercedes="#8E7CA2"
+  var Honda="#11D07A"
+  var Bmw="#DD1C1A"
+  var Ford="#FFA500"
+  var Toyota="#0000FF"
+  //Read in CSV
+  d3.csv("../cars-sample.csv").then((data) => {
+      var x = d3.scaleLinear()
+          .domain([d3.min(data, (d) => { return +d.Weight})*0.95, d3.max(data, (d) => { return +d.Weight})*1.05])
+          .range([ 0, width ]);
+
+      var y = d3.scaleLinear()
+          .domain([d3.min(data, (d) => { return +d.MPG})*0.95, d3.max(data, (d) => { return +d.MPG})*1.05])
+          .range([height, 0]);
+        
+      var svg = d3.select('#scatterplot');
+
+      const Graph = svg.append("g")
+        .attr("transform", `translate(50, 50)`);
+
+      Graph.append("g")
+          .attr("transform", "translate(0," + (height) + ")")
+          .call(d3.axisBottom(x).ticks(4).tickSize(-height));
+
+      Graph.append("text")
+            .attr("transform", "translate("+ (width/2) +"," + (height+20) + ")")
+            .text("Weight");
+
+      Graph.append("g")
+          .call(d3.axisLeft(y).ticks(4).tickSize(-width));
+
+      Graph.append("text")
+        // .attr("transform", "translate(-40," + (height/2) + ")")
+        .attr("transform", "rotate(-90)")
+        .attr("transform", "translate(-40,300)")
+        .text("MPG");
+
+      Graph.append("g")
+          .selectAll("circle")
+            .data(data)
+            .enter()
+            .append("circle")
+                .attr("cx", function (d) { return x(+d.Weight); } )
+                .attr("cy", function (d) { return y(+d.MPG); } )
+                .attr("r", function (d) { 
+                  //2 values in MPG are NaN so this makes them invisible :/
+                  if(+d.MPG){
+                    return 0.002*(+d.Weight);
+                  } else {
+                    return 0;
+                  }
+                } )
+                .style("opacity", 0.5)
+                .style("fill", function (d) {
+                  switch(d.Manufacturer){
+                    case "ford":
+                      return Ford;
+                      break;
+                    case 'bmw':
+                      return Bmw; 
+                      break;
+                    case 'toyota':
+                      return Toyota;
+                      break;
+                    case 'honda':
+                      return Honda;
+                      break;
+                    case 'mercedes':
+                      return Mercedes;
+                      break;
+                    default:
+                      return "#000000";
+                  }
+                });
+
+  });
 </script>
