--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 //data = FileAttachment("cars-sample.csv").csv({ typed: true })
 
-  var height = 500;
-  var width = 600;
+  var height = 1000*0.5;
+  var width = 1000;
   var margin = ({top: 20, right: 50, bottom: 30, left: 100});
 
   // initialize our scales
