--- a/d3/index.html
+++ b/d3/index.html
@@ -6,7 +6,7 @@
 
 <script>
 
-    const margin = {top: 10, right: 20, bottom: 40, left: 20};
+    const margin = {top: 10, right: 20, bottom: 60, left: 60};
     const width = 400 - margin.left - margin.right;
     const height = 400 - margin.top - margin.bottom;
 
@@ -42,5 +42,20 @@
             .attr("fill", d => colorScale(d.Manufacturer))
             .attr("opacity" , _ => 0.5)
             .attr("r", d => d.Weight / 400 -1)
+
+        // Axis labels based on https://stackoverflow.com/a/11194968/5987669
+        svg.append("text")
+            .attr("class", "x label")
+            .attr("text-anchor", "middle")
+            .attr("x", width / 2)
+            .attr("y", height + margin.top + margin.bottom / 2)
+            .text("Weight");
+        svg.append("text")
+            .attr("class", "y label")
+            .attr("text-anchor", "middle")
+            .attr("y", -margin.left / 2)
+            .attr("x", -height / 2)
+            .attr("transform", "rotate(-90)")
+            .text("MPG");
     });
 </script>
