--- a/d3/index.html
+++ b/d3/index.html
@@ -24,7 +24,7 @@
             .domain(d3.extent(data, d => d.Weight)).nice()
             .range([ 0, width ]);
         svg.append("g")
-            .attr("transform", "translate(0," + height + ")")
+            .attr("transform", `translate(0, ${height})`)
             .call(d3.axisBottom(x).ticks(4));
 
         const y = d3.scaleLinear()
