--- a/d3/index.html
+++ b/d3/index.html
@@ -188,7 +188,7 @@
                     .attr('r', size(+d.Weight))
                     .attr('opacity', .7)
             })
-        textg.raise()
+        labels.raise()
         pathg.lower()
     }
 
